<?xml version="1.0"?>
<package>
  <name>agvs</name>
  <version>0.1.0</version>
  <description>The agvs package. This package contains all the components to simulate the AGVS robot</description>

 
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>

  <author email="rnavarro@robotnik.es">Román Navarro</author>
  
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/agvs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>guardian_control</run_depend>
  <run_depend>guardian_description</run_depend>
  <run_depend>guardian_gazebo</run_depend>
  <run_depend>guardian_joystick</run_depend>
  <run_depend>guardian_robot_control</run_depend>
  <run_depend>lwa4p_description</run_depend>
  <run_depend>robotnik_wam_description</run_depend>


  <export><metapackage/></export>
</package>
