<?xml version="1.0"?>
<package>
  <name>agvs_complete</name>
  <version>0.1.0</version>
  <description>The agvs_complete package. It contains multiple launch files to perform different tasks, from creating a map with gmapping to launching amcl.</description>


  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/agvs_complete</url>
  <url type="repository">https://github.com/RobotnikAutomation/agvs</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/agvs/issues</url>


  <author email="rnavarro@robotnik.es">Román Navarro</author> 

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
