<?xml version="1.0"?>
<package>
  <name>agvs_description</name>
  <version>0.1.0</version>
  <description>The agvs_description package. Robot description. Urdf and mesh files.</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzm치n</maintainer>
  <maintainer email="rnavarro@robotnik.es">Rom치n Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/agvs_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/agvs</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/agvs/issues</url>

  <author email="rnavarro@robotnik.es">Rom치n Navarro</author> 
  <author email="rguzman@robotnik.es">Roberto Guzm치n</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>


  <export>

  </export>
</package>
