<?xml version="1.0"?>
<package>
  <name>agvs_pad</name>
  <version>0.1.0</version>
  <description>The agvs_pad package.Component to control the robot by using a ps3 pad.</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/agvs_pad</url>
  <url type="repository">https://github.com/RobotnikAutomation/agvs</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/agvs/issues</url>


  <author email="rnavarro@robotnik.es">Román Navarro</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_depend>agvs_robot_control</build_depend> 
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>agvs_robot_control</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>

  </export>
</package>
